# websim

./: Cargo.toml  Justfile  LICENSE.txt  README.md  websim.config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: config.rs  content_type.rs  db.rs  handler.rs  lib.rs  main.rs  openrouter.rs  server.rs  state.rs  utils.rs
