[package]
name = "websim"
version = "0.1.0-dev"
edition = "2024"
license = "MIT-0"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
clap = { version = "4.5.51", features = ["derive"] }
config = "0.15.18"
console-subscriber = "0.5.0"
minijinja = "2.12.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.48.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "tracing"
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
